Fix box overflow

--- a/src/NfqAkademija/RecipeBundle/Resources/public/css/style.css
+++ b/src/NfqAkademija/RecipeBundle/Resources/public/css/style.css
@@ -23,6 +23,9 @@ div.recipe-box h4 a{
     font-weight:600;
 }
 
+div.recipe-box, div.ingredient_block, div.recipe-invis{
+     max-width:300px;
+}
 
 /* navbar */
 .navbar-default {
